--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.8",
+    "native-base": "^2.15.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0"
   },
