--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/styled-components-react-native": "^5.1.1",
     "expo": "~41.0.1",
+    "expo-app-loading": "^1.0.3",
     "expo-status-bar": "~1.0.4",
     "formik": "^2.2.8",
     "native-base": "^2.15.2",
