--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "styled-components": "^5"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@types/styled-components-react-native": "^5.1.1",
     "expo": "~41.0.1",
     "expo-app-loading": "^1.0.3",
