--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@types/styled-components-react-native": "^5.1.1",
-    "expo": "~41.0.1",
+    "expo": "^41.0.1",
     "expo-app-loading": "^1.0.3",
     "expo-status-bar": "~1.0.4",
     "feather-icons": "^4.28.0",
     "formik": "^2.2.8",
     "native-base": "^2.15.2",
-    "react": "16.13.1",
+    "react": "17.0.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native": "0.64.2",
     "react-native-easy-grid": "^0.2.2",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
